--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
     - content.tooltips
     - navigation.instant
     - navigation.tabs
+    - toc.integrate
 
 
 markdown_extensions:
@@ -19,7 +20,16 @@ markdown_extensions:
       auto_append:
         - includes/abbreviations.md
   - pymdownx.tabbed:
-      alternate_style: true 
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true 
 
 extra_css:
   - stylesheets/extra.css
+
+nav:
+  - Home: index.md
+  - Lab-protocols: lab-protocols
+  - Bioinformatics: 
+      - bioinformatics/intro-to-linux.md
+      - bioinformatics/basecalling.md
