--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,3 +38,5 @@ nav:
       - bioinformatics/basecalling.md
       - bioinformatics/mapping.md
       - bioinformatics/variant-calling.md
+  - Extra reading:
+      - about_conda.md
